--- a/yoga/index.html
+++ b/yoga/index.html
@@ -230,7 +230,7 @@
     </footer>
 </body>
 
-<script src="http://code.jquery.com/jquery.js"></script>
+<script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
 
