--- a/yoga/index.html
+++ b/yoga/index.html
@@ -232,6 +232,6 @@
 
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
 
 </html>
