--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta lang="pl">
-    <meta name="viewport" content="width=content-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One" rel="stylesheet">
 
 
@@ -41,7 +41,7 @@
             <h3>About me</h3>
             <hr class="underline">
             <article class="about-text">
-            <img class="profilepic" src="./images/me.jpg" alt="Profile picture">
+            <img id="profilepic" src="./images/me.jpg" alt="Profile picture">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto blanditiis veritatis iste temporibus laboriosam officia beatae, fuga odio quos, aut a dolore molestiae vel? Maiores facilis recusandae soluta quod fugit!</p>
             <a href="https://github.com/PatrycjaKubiczek"><img src="./images/github.png"></a>
             <a href="https://www.linkedin.com/in/patrycja-kubiczek"><img src="./images/linkedin.png"></a>
