--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
             <hr class="underline">
             <article class="about-text">
             <img id="profilepic" src="./images/me.jpg" alt="Profile picture">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto blanditiis veritatis iste temporibus laboriosam officia beatae, fuga odio quos, aut a dolore molestiae vel? Maiores facilis recusandae soluta quod fugit!</p>
+            <p>I am a graduate school program Coders Lab, where I completed an intensive course: "Become a Frontend
+                Developer". Currently I am looking for a job in the IT industry and further career opportunities.</p>
             <a href="https://github.com/PatrycjaKubiczek"><img src="./images/github.png"></a>
             <a href="https://www.linkedin.com/in/patrycja-kubiczek"><img src="./images/linkedin.png"></a>
-                <button><a href="./cv/cv-patrycja-kubiczek.pdf">Download my CV</a></button>
+                <button><a href="./cv/cv-patrycja-kubiczek-en.pdf">Download my CV (english)</a></button>
+                <button><a href="./cv/cv-patrycja-kubiczek.pdf">or polish</a></button>
             </article>
         </section>
         
