--- a/index.html
+++ b/index.html
@@ -102,5 +102,6 @@
            <p> icons: <a href="http://www.flaticon.com/authors/zlatko-najdenovski">Zlato Najdenovski</a>, <a href="http://www.flaticon.com/authors/madebyoliver">Madebyoliver</a> and <a href="http://www.flaticon.com/authors/freepik">Freepik</a> from www.flaticon.com </p>
        </footer>
     </body>
-    <script src="app.js"></script>
+    <script src="./js/jquery-3.1.0.min.js"></script>
+    <script src="./js/app.js"></script>
 </html>
