--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <meta lang="pl">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Poiret+One" rel="stylesheet">
-
-
-
     <link rel="stylesheet" href="css/main.css">
-    <title></title>
+    <title>Junior Front-End Developer looking for job in Kraków!</title>
 </head>
 
 <body>
@@ -22,9 +19,8 @@
             <div class="container">
                 <h2>Hello. I'm Patrycja Kubiczek</h2>
                 <h1>Junior Front-end Developer</h1>
-                <p>(website is currently in progress..)</p>
+                <p>(website is currently in progress...)</p>
                 <button>find out more about me</button>
-
             </div>
     </header>
 
@@ -78,7 +74,7 @@
         <div class="overlay">
             <h2>Sit On Chair</h2>
             <p>
-                <a href="https://github.com/PatrycjaKubiczek/CL-Workshop-SitOnChair" target="_blank" >see demo</a>
+                <a href="https://github.com/PatrycjaKubiczek/CL-Workshop-SitOnChair" target="_blank" >see code</a>
             </p>
         </div>
     </div>
@@ -91,7 +87,7 @@
         <div class="overlay">
             <h2>Veg map</h2>
             <p>
-                <a href="https://github.com/PatrycjaKubiczek/CL-Workshops-VegMap">see demo</a>
+                <a href="https://github.com/PatrycjaKubiczek/CL-Workshops-VegMap" target="_blank">see code</a>
             </p>
         </div>
     </div>
@@ -103,7 +99,7 @@
         <div class="overlay">
             <h2>First page</h2>
             <p>
-                <a href="https://github.com/PatrycjaKubiczek/CL-first-page" target="_blank">see demo</a>
+                <a href="https://github.com/PatrycjaKubiczek/CL-first-page" target="_blank">see code</a>
             </p>
         </div>
     </div>
@@ -143,9 +139,10 @@
        <section class="container">
            <h3 id="contact">Contact</h3>
            <hr class="underline">
-           <p>Email:</p>
-           <p>Linkedin</p>
-           <p></p>
+           <p>Email: p.kubiczek(at)gmail.com</p>
+           <p><a href="https://www.linkedin.com/in/patrycja-kubiczek">Linkedin</a> // 
+           <a href="https://github.com/PatrycjaKubiczek">GitHub</a></p>
+           
        </section>
        
        <footer class="container">
