--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h2>Hello. I'm Patrycja Kubiczek</h2>
                 <h1>Junior Front-end Developer</h1>
                 <p>(website is currently in progress...)</p>
-                <button>find out more about me</button>
+                <button><a href="#about">find out more about me</a></button>
             </div>
     </header>
 
