--- a/projects/quote-machine/index.html
+++ b/projects/quote-machine/index.html
@@ -4,7 +4,7 @@
   <head>
    <meta charset="UTF-8">
    <link href="https://fonts.googleapis.com/css?family=Bad+Script|Open+Sans" rel="stylesheet">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="./main.css">
     <title>Quote machine</title>
   </head>
