--- a/projects/bs-template/index.html
+++ b/projects/bs-template/index.html
@@ -15,38 +15,39 @@
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Logo</a>
-                </div>
 
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#offer">What we offer</a></li>
-                        <li><a href="#portfolio">Portfolio</a></li>
-                         <li><a href="#pricing">Pricing</a></li>
-                        <li><a href="#about">Who we are</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Logo</a>
             </div>
-        </nav>
-    </header>
 
-    <section class="jumbotron text-center" id="up">
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right list-unstyled list-inline">
+                    <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#home">Home</a></li>
+                    <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#offer">What we offer</a></li>
+                    <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#portfolio">Portfolio</a></li>
+                    <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#pricing">Pricing</a></li>
+                    <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#about">Who we are</a></li>
+                    <li><a data-toggle="collapse" data-target=".navbar-collapse.in" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <header class="jumbotron text-center" id="up">
         <h1>Name</h1>
         <p>Motto: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe cupiditate.</p>
-        <img src="images/bg-pexels.jpg">
+        <!--        <img src="images/bg-pexels.jpg">-->
         <div class="slide-down"><a href="#offer">Slide down <span class="glyphicon glyphicon-chevron-down"></span></a></div>
-    </section>
+    </header>
 
     <section id="offer" class="container-fluid bg-col">
         <div class="row">
@@ -94,7 +95,7 @@
                 <img class="img-responsive img-works" src="images/pexels-photo-110469.jpeg" alt="Project">
                 <!--                <span class="desc">Project four</span>-->
             </div>
-<!--
+            <!--
             <div class="col-sm-3 text-center work">
                 <img class="img-responsive img-works" src="images/ipad-tablet-technology-touch.jpg">
                 
@@ -208,28 +209,14 @@
         </div>
     </section>
 
-<!--
-    <section id="partners" class="container-fluid">
-   
-        <div class="row">
-
-        </div>
-    </section>
--->
-
-
-
-
-
     <footer class="main-footer">
-        <a href="#mynav">up</a>
+<!--        <a href="#mynav">up</a>-->
         <section id="contact" class="container-fluid">
             <div class="row">
-                <!--            Contact us-->
                 <div class="col-sm-6">
                     <h4><span class="glyphicon glyphicon-map-marker"></span>
                 Adress:</h4>
-                    <p>City Street
+                    <p>City, Street
 
                     </p>
                     <h4><span class="glyphicon glyphicon-earphone"></span>
@@ -243,9 +230,9 @@
                 <div class="col-sm-6">
                     <h4>Lorem</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam est vel perferendis rem, nihil nisi assumenda ratione, repellendus quis tempora. Magnam sint, nostrum cumque iusto illo qui nemo quia obcaecati.</p>
-                    <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
-                    <i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i>
-                    <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+                    <a href="#"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
                 </div>
 
             </div>
@@ -260,7 +247,7 @@
 
     </footer>
 
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="./js/app.js"></script>
 </body>
