--- a/projects/flywithus/index.html
+++ b/projects/flywithus/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="https//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -311,7 +311,7 @@
             <div class="slide-4">
                 <div class="quote">
                     <div class="quote-inner">
-                        <img src="./images/customer4.png" alt="Customer 4">
+                        <img src="./images/customer4.jpeg" alt="Customer 4">
                         <span class="up-quo">&ldquo;</span>
                         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem cupiditate asperiores id libero ipsa aut deserunt, facere similique est adipisci. </p>
                         <span class="down-quo">&rdquo;</span>
