--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
         <h3 id="portfolio">Portfolio</h3>
         <hr class="underline">
 
+       <div class="portfolio-work">
+            <div class="hovereffect">
+                <img class="img-responsive" src="./imgs/screenshoot8.png" alt="">
+                <div class="overlay">
+                    <h2>Fly with us</h2>
+                    <p>
+                        <a href="https://github.com/PatrycjaKubiczek/Weekly-WebDev-Challenge-19" target="_blank">see code</a> //
+                        <a href="https://patrycjakubiczek.github.io/projects/flywithus/" target="_blank">see demo</a>
+                    </p>
+                </div>
+            </div>
+        </div>
         <div class="portfolio-work">
             <div class="hovereffect">
                 <img class="img-responsive" src="./imgs/screenshoot7.png" alt="">
