--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <nav class="container">
-        <ul class="menu">
+        <ul class="menu sticky">
             <li><a href="index.html">Home</a></li>
             <li><a href="#about">About me</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
