--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h2>Radio widget</h2>
                     <p>
                         <a href="https://github.com/PatrycjaKubiczek/radio-widget" target="_blank">see code</a> //
-                        <a href="https://s.codepen.io/noye/debug/gLmmbW" target="_blank">see demo</a>
+                        <a href="https://codepen.io/noye/full/gLmmbW/" target="_blank">see demo</a>
                     </p>
                 </div>
             </div>
