--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html>
 
 <head>
-
     <meta charset="utf-8">
     <meta lang="pl">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato|Old+Standard+TT" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel='icon' href='./images/mouse.png' sizes="16x16" type="image/png">
-    <title>Junior Front-End Developer looking for job in Kraków!</title>
+    <title>Junior Front-End Developer - Patrycja Kubiczek</title>
 </head>
 
 <body>
-
 
     <nav class="container">
         <ul class="menu sticky">
@@ -33,11 +31,10 @@
             </div>
             <h2>Junior Front-end Developer</h2>
             <button class="button">
-                <a href="#about">
-                    <p>Find out more</p>
-                    <img src="images/down-arrow.png" alt="Arrow Down"></a>
+                <a href="#about"><p>Find out more</p><img src="images/down-arrow.png" alt="Arrow Down"></a>
             </button>
         </div>
+
     </header>
 
 
@@ -47,15 +44,12 @@
         <hr class="underline">
         <article class="aboutme-text">
             <img id="profilepic" src="./images/me.jpg" alt="Profile picture">
-            <p>Hi! My name is Patrycja Kubiczek and I'm coding enthusiast. Recently I graduate from programming school Coders Lab, where I completed an intensive bootcamp course: "Become a Frontend Developer". Currently I am looking for a job and a place where I could improve my skills. You can find more information about me in my resume below.
-            </p>
+            <p>Hi! My name is Patrycja Kubiczek and I'm junior front-end developer. Last year I graduate from programming school Coders Lab, where I completed an intensive bootcamp course: "Become a Frontend Developer".</p>
 
-            <p class="resume">
-                <span>Download my CV:
+            <p class="resume"><span>Download my CV: 
                 <a href="./cv/cv-patrycja-kubiczek-en.pdf">english</a> | 
                 <a href="./cv/cv-patrycja-kubiczek.pdf">polish</a></span>
             </p>
-
 
         </article>
     </section>
@@ -64,7 +58,7 @@
         <h3 id="portfolio">Portfolio</h3>
         <hr class="underline">
 
-       <div class="portfolio-work">
+        <div class="portfolio-work">
             <div class="hovereffect">
                 <img class="img-responsive" src="./imgs/screenshoot8.png" alt="">
                 <div class="overlay">
@@ -76,6 +70,7 @@
                 </div>
             </div>
         </div>
+
         <div class="portfolio-work">
             <div class="hovereffect">
                 <img class="img-responsive" src="./imgs/screenshoot7.png" alt="">
@@ -127,8 +122,8 @@
                 </div>
             </div>
         </div>
-        
-<div class="portfolio-work">
+
+        <div class="portfolio-work">
             <div class="hovereffect">
                 <img class="img-responsive" src="./imgs/screenshoot3a.png" alt="">
                 <div class="overlay">
@@ -140,7 +135,6 @@
                 </div>
             </div>
         </div>
-
 
         <div class="portfolio-work">
             <div class="hovereffect">
@@ -154,7 +148,6 @@
             </div>
         </div>
 
-
         <div class="portfolio-work">
             <div class="hovereffect">
                 <img class="img-responsive" src="./imgs/screenshoot2a.png" alt="">
@@ -167,30 +160,27 @@
             </div>
         </div>
 
-
-
     </section>
 
-    <section class="container">
-        <h3 id="contact">Contact</h3>
-        <hr class="underline">
-        <p>Email: p.kubiczek(at)gmail.com</p>
-        <p><a href="https://www.linkedin.com/in/patrycja-kubiczek">Linkedin</a> //
-            <a href="https://github.com/PatrycjaKubiczek">GitHub</a></p>
+        <section class="container">
+            <h3 id="contact">Contact</h3>
+            <hr class="underline">
+            <p>Email: p.kubiczek(at)gmail.com</p>
+            <p><a href="https://www.linkedin.com/in/patrycja-kubiczek">Linkedin</a> //
+                <a href="https://github.com/PatrycjaKubiczek">GitHub</a></p>
 
-    </section>
+        </section>
 
-    <footer>
-        <div class="container">
-            <p>2016 | <a href="http://github.com/patrycjakubiczek">Patrycja Kubiczek</a></p>
-            <p> icons: <a href="http://www.flaticon.com/authors/lucy-g" title="Lucy G">Lucy G</a> and <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
-        </div>
+        <footer>
+            <div class="container">
+                <p>2016 | <a href="http://github.com/patrycjakubiczek">Patrycja Kubiczek</a></p>
+                <p> icons: <a href="http://www.flaticon.com/authors/lucy-g" title="Lucy G">Lucy G</a> and <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
+            </div>
 
-    </footer>
+        </footer>
 
     <script src="./js/jquery-3.1.0.min.js"></script>
     <script src="./js/app.js"></script>
 
-</body>
-
+    </body>
 </html>
