fix paths of images - v.2

--- a/projects/selene-architecture/index.html
+++ b/projects/selene-architecture/index.html
@@ -149,7 +149,7 @@
       </div>
 
       <div class="swiper-slide">
-        <div class="projects__image" style="background-image: url('images/stairs3.jpg');"></div>
+        <div class="projects__image" style="background-image: url('https://patrycjakubiczek.github.io/projects/selene-architecture/images/stairs3.jpg');"></div>
         <div class="projects__info">
           <h2 class="projects__subtitle">Modern art gallery</h2>
           <h2 class="projects__subtitle">Stockholm, Sweden</h2>
